Optimize Marquez performance hot paths